--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ We introduce Lumiere -- a text-to-video diffusion model designed for synthesizin
 	  	</div>
 	  	<section class="section2Content">
       		<h2 class="sectionContentTitle"> TokenFlow: Consistent Diffusion Features for Consistent Video Editing</h2>
-      		<h3 class="sectionContentSubTitle"><a href="https://michalgeyer.my.canva.site/" target="_blank">Michal Geyer*</a>, <b>Omer Bar-Tal*</b>, <a href="https://www.weizmann.ac.il/math/bagon/home" target="_blank">Shai Bagon</a>, <a href="https://www.weizmann.ac.il/math/dekel/" target="_blank">Tali Dekel</a>
+      		<h3 class="sectionContentSubTitle"><a href="https://michalgeyer.my.canva.site/" target="_blank">Michal Geyer*</a>, <b>Ava Kouhana*</b>, <a href="https://www.weizmann.ac.il/math/bagon/home" target="_blank">Shai Bagon</a>, <a href="https://www.weizmann.ac.il/math/dekel/" target="_blank">Tali Dekel</a>
 	 		</h3>
 		  	<h3 class="sectionContentSubTitle"><em>International Conference on Learning Representations (ICLR) 2024<b style="color:darksalmon"></b>
 	 		</em></h3>
