--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Omer Bar-Tal's Homepage</title>
+<title>Ava Kouhana's Homepage</title>
 <link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 </style>
