--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <!--	<img src="AboutPageAssets/images/fonitAigolkatan.jpg" alt="sample" width="259"> </div>-->
   <!-- Identity details -->
   <section class="profileHeader">
-    <h1>Omer Bar-Tal</h1>
-<!--    <h3>PhD student</h3>-->
+    <h1>Ava Kouhana</h1>
+<!--    <h3>MS Student @Stanford ICME (Computational and Mathematical Engineering) </h3>-->
     <hr>
     <p> I am an ICME master's degree student at Stanford University. Prior to Stanford, I spent six months conducting research at Harvard under the supervision of Dr. Mengyu Wang, focusing primarily on Computer Vision tasks like Image Segmentation and Vision-Language Models. Before joining ICME , I have had the opportunity to work for six months supervised by Stanford Professor Craig Levin, researching the application of Diffusion Models for image super-resolution.
         My research interests primarily revolve around computer vision, deep learning, and generative AI, with a growing interest for 3D modeling and video generation.
