--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <!-- Previous experience details -->
   
   <section class="section2">
-  <h2 class="sectionTitle">Selected Publications</h2>
+  <h2 class="sectionTitle">Publications</h2>
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
 	  	  <!-- Lumiere  -->
@@ -87,7 +87,8 @@
 			<video width="100%" playsinline="" autoplay="" loop="" preload="" muted=""> <source src="AboutPageAssets/teasers/Lumiere_compressed.mp4" type="video/mp4"> </video>
 	  	</div>
 	  	<section class="section2Content">
-      		<h2 class="sectionContentTitle">Lumiere: A Space-Time Diffusion Model for Video Generation</h2>
+      		<h2 class="sectionContentTitle">FairSeg: A Large-Scale Medical Image Segmentation Dataset for Fairness Learning Using Segment Anything Model with Fair Error-Bound Scaling
+            </h2>
       		<h3 class="sectionContentSubTitle"><b>Omer Bar-Tal</b>*,<a href="https://hila-chefer.github.io" target="">Hila Chefer*</a>, <a href="https://scholar.google.com/citations?user=lbo_R54AAAAJ&hl=en" target="_blank">Omer Tov*</a>,<a href="https://scholar.google.com/citations?user=LQvi5XAAAAAJ&hl=en" target="_blank">Charles Herrmann</a>,<a href="https://scholar.google.com/citations?user=-KSDNZQAAAAJ&hl=en" target="_blank">Roni Paiss</a>, <a href="https://scholar.google.com/citations?hl=en&user=I2qheksAAAAJ" target="_blank">Shiran Zada</a>,<a href="https://scholar.google.com/citations?user=n4dxd1YAAAAJ&hl=en" target="_blank">Ariel Ephrat</a>,<a href="https://scholar.google.com/citations?hl=en&user=z4dNJdkAAAAJ" target="_blank">Junhwa Hur</a>,<a href="https://scholar.google.com/citations?hl=en&user=k1eaag4AAAAJ" target="_blank">Yuanzhen Li</a>,<a href="https://tomer.net.technion.ac.il/" target="_blank">Tomer Michaeli</a>,<a href="https://scholar.google.com/citations?user=0B8uuBkAAAAJ&hl=en" target="_blank">Oliver Wang</a>,<a href="https://scholar.google.com/citations?hl=en&user=t4rgICIAAAAJ" target="_blank">Deqing Sun</a>,<a href="https://www.weizmann.ac.il/math/dekel/home" target="_blank">Tali Dekel</a>,<a href="https://research.google/people/inbar-mosseri/" target="_blank">Inbar Mosseri</a>
 	 		</h3>
 		  	<h3 class="sectionContentSubTitle"><em>SIGGRAPH Asia 2024<b style="color:darksalmon"></b>
