--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       <img src="AboutPageAssets/images/mail.png"  alt="sample" width="30" ></a> </div>
 	   <div class="socialNetworkNav"> 
       <!-- Add a Anchor tag with nested img tag here --> 
-		<a href="https://www.linkedin.com/in/omer-bar-tal/">
+		<a href="https://www.linkedin.com/in/ava-k-a56a90186">
       <img src="AboutPageAssets/images/LinkedIN.png"  alt="sample" width="30" ></a> </div>
       <div class="socialNetworkNav">
       <!-- Add a Anchor tag with nested img tag here --> 
-		<a href="https://github.com/omerbt" target="_blank">
+		<a href="https://github.com/avakn5" target="_blank">
       <img src="AboutPageAssets/images/github.png" alt="sample" width="30"></a>  </div>
     <div class="socialNetworkNav"> 
 		<a href="https://scholar.google.fr/citations?user=nxESuB0AAAAJ&hl=fr
@@ -61,9 +61,7 @@
       <!-- Add a Anchor tag with nested img tag here --> 
       <img src="AboutPageAssets/images/scholar.jpg"  alt="sample" width="30"></a>  </div>
 	  	  <div class="socialNetworkNav">
-      <!-- Add a Anchor tag with nested img tag here --> 
-		<a href="https://twitter.com/omerbartal" target="_blank">
-      <img src="AboutPageAssets/images/twitt.png" alt="sample" width="30"></a>  </div>
+   
 <!--
 	  <div class="socialNetworkNav">
 		 <a href="https://www.linkedin.com/in/lior-yariv-3a01a690/" target="_blank">
@@ -89,8 +87,7 @@
 	  	<section class="section2Content">
       		<h2 class="sectionContentTitle">FairSeg: A Large-Scale Medical Image Segmentation Dataset for Fairness Learning Using Segment Anything Model with Fair Error-Bound Scaling
             </h2>
-      		<h3 class="sectionContentSubTitle"><b>Omer Bar-Tal</b>*,<a href="https://hila-chefer.github.io" target="">Hila Chefer*</a>, <a href="https://scholar.google.com/citations?user=lbo_R54AAAAJ&hl=en" target="_blank">Omer Tov*</a>,<a href="https://scholar.google.com/citations?user=LQvi5XAAAAAJ&hl=en" target="_blank">Charles Herrmann</a>,<a href="https://scholar.google.com/citations?user=-KSDNZQAAAAJ&hl=en" target="_blank">Roni Paiss</a>, <a href="https://scholar.google.com/citations?hl=en&user=I2qheksAAAAJ" target="_blank">Shiran Zada</a>,<a href="https://scholar.google.com/citations?user=n4dxd1YAAAAJ&hl=en" target="_blank">Ariel Ephrat</a>,<a href="https://scholar.google.com/citations?hl=en&user=z4dNJdkAAAAJ" target="_blank">Junhwa Hur</a>,<a href="https://scholar.google.com/citations?hl=en&user=k1eaag4AAAAJ" target="_blank">Yuanzhen Li</a>,<a href="https://tomer.net.technion.ac.il/" target="_blank">Tomer Michaeli</a>,<a href="https://scholar.google.com/citations?user=0B8uuBkAAAAJ&hl=en" target="_blank">Oliver Wang</a>,<a href="https://scholar.google.com/citations?hl=en&user=t4rgICIAAAAJ" target="_blank">Deqing Sun</a>,<a href="https://www.weizmann.ac.il/math/dekel/home" target="_blank">Tali Dekel</a>,<a href="https://research.google/people/inbar-mosseri/" target="_blank">Inbar Mosseri</a>
-	 		</h3>
+            <h3 class="sectionContentSubTitle"><a href="https://yutianyt.com/" target="_blank">Yu Tian</a>*, <b>Min Shi*</b>, <a href="#" target="_blank">Yan Luo*</a>, <b>Ava Kouhana</b>, <a href="#" target="_blank">Tobias Elze</a>, <a href="#" target="_blank">Mengyu Wang</a></h3>	 		</h3>
 		  	<h3 class="sectionContentSubTitle"><em>SIGGRAPH Asia 2024<b style="color:darksalmon"></b>
 	 		</em></h3>
     	</section>
