--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
 
 <!-- Content -->
 <section class="mainContent">
+
+<!-- GitHub Projects -->
+<section class="section2 github-projects">
+  <h2 class="sectionTitle">Pinned GitHub Projects</h2>
+  <hr class="sectionTitleRule">
+  
+  <div style="display:flex; flex-direction:column; gap:20px; padding-left:40px;">
+    <div style="border:1px solid #ddd; border-radius:10px; padding:15px; max-width:500px;">
+      <h3>
+        <a href="https://github.com/avakn5/BPE_From_Stratch_CS336_Stanford" target="_blank" style="text-decoration:none; color:#333;">
+          BPE_From_Stratch_CS336_Stanford
+        </a>
+      </h3>
+      <p>Personal implementation of BPE from scratch following Stanford CS336 instructions.</p>
+      <p><b>Language:</b> Python</p>
+    </div>
+  </div>
+</section>
+
   <!-- Publications -->
   <section class="section2">
     <h2 class="sectionTitle">Publications</h2>
@@ -140,14 +159,6 @@
       <li><b>2nd place Outstanding Poster at the 20th anniversary of ICME Stanford Research Symposium</b></li>
     </ul>
   </section>
-
-  <!-- GitHub Projects -->
-  <section class="section2 github-projects">
-    <h2 class="sectionTitle">Pinned GitHub Projects</h2>
-    <hr class="sectionTitleRule">
-    <p style="padding-left:40px;">Coming soon...</p>
-  </section>
-</section>
 
 <footer>
   <br><br>
