--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <footer>
   <br><br>
-  <p class="footerDisclaimer">Designed by Ava Kouhana | Template inspired by <a href="https://lioryariv.github.io/">Lior Yariv</a></p>
+  <p class="footerDisclaimer" style="font-size:8px;">Template inspired by <a href="https://lioryariv.github.io/">Lior Yariv</a></p>
 </footer>
 </body>
 </html>
