--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
 <!-- Content -->
 <section class="mainContent">
 
+<section class="section2 github-projects">
+  <h2 class="sectionTitle">Pinned GitHub Projects</h2>
+  <hr class="sectionTitleRule">
+  <div style="padding-left:40px;">
+    <iframe src="https://gh-card.dev/repos/avakn5/BPE_From_Stratch_CS336_Stanford.svg" frameborder="0" scrolling="0" width="400" height="150"></iframe>
+  </div>
+</section>
+
 <!-- GitHub Projects -->
 <section class="section2 github-projects">
   <h2 class="sectionTitle">Pinned GitHub Projects</h2>
