--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <!-- FairSeg -->
     <div class="sectionContent">
-      <img src="AboutPageAssets/images/fairseg-thumbnail.jpg" style="width:100%; object-fit:contain" alt="FairSeg">
+      <img src="AboutPageAssets/images/fairseg-thumbnail.png" style="width:100%; object-fit:contain" alt="FairSeg">
     </div>
     <section class="section2Content">
       <h2 class="sectionContentTitle">FairSeg: A Large-Scale Medical Image Segmentation Dataset for Fairness Learning Using Segment Anything Model with Fair Error-Bound Scaling</h2>
@@ -114,7 +114,7 @@
 
     <!-- FairCLIP -->
     <div class="sectionContent">
-      <img src="AboutPageAssets/images/fairclip-thumbnail.jpg" style="width:100%; object-fit:contain" alt="FairCLIP">
+      <img src="AboutPageAssets/images/fairclip-thumbnail.png" style="width:100%; object-fit:contain" alt="FairCLIP">
     </div>
     <section class="section2Content">
       <h2 class="sectionContentTitle">FairCLIP: Harnessing Fairness in Vision-Language Learning</h2>
