--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
   <h2 class="sectionTitle">Pinned GitHub Projects</h2>
   <hr class="sectionTitleRule">
   <div style="padding-left:40px;">
-    <iframe src="https://gh-card.dev/repos/avakn5/BPE_From_Stratch_CS336_Stanford.svg" frameborder="0" scrolling="0" width="400" height="150"></iframe>
+    <a href="https://github.com/avakn5/BPE_From_Stratch_CS336_Stanford" target="_blank" style="text-decoration:none;">
+      <img src="https://gh-card.dev/repos/avakn5/BPE_From_Stratch_CS336_Stanford.svg" alt="GitHub Project Card" style="border:0;">
+    </a>
   </div>
 </section>
+
 
 <!-- GitHub Projects -->
 <section class="section2 github-projects">
