--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <h3>MS Student @ Stanford ICME (Computational and Mathematical Engineering)</h3>
     <hr>
     <p>
-      I am an ICME master's degree student at Stanford University. Prior to Stanford, I spent six months conducting research at Harvard under the supervision of <a href="https://wang.hms.harvard.edu/about-us/" target="_blank">Dr. Mengyu Wang</a>, focusing primarily on Computer Vision tasks like Image Segmentation and Vision-Language Models. Before joining ICME, I had the opportunity to work for six months supervised by Stanford Professor <a href="https://med.stanford.edu/profiles/craig-levin" target="_blank">Dr. Craig Levin</a>, researching the application of Diffusion Models for image super-resolution.
+      I am an ICME master's degree student at Stanford University. Prior to Stanford, I spent six months conducting research at Harvard under the supervision of <a href="https://wang.hms.harvard.edu/about-us/" target="_blank">Dr. Mengyu Wang</a>, focusing primarily on Computer Vision tasks like Image Segmentation and Vision-Language Models. Before joining ICME, I had the opportunity to work for six months supervised by Stanford Professor <a href="https://med.stanford.edu/profiles/craig-levin" target="_blank">Dr. Craig Levin</a>, researching the application of Diffusion Models for image super-resolution.<br>
+      
       My research interests primarily revolve around computer vision, deep learning, and generative AI, with a growing interest for 3D modeling and video generation.
     </p>
   </section>
