--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
       </a>
     </div>
   </aside>
-  
 
+  <!-- Search Bar with Stanford Logo -->
+<div class="search-bar" style="display:flex; align-items:center; margin-top:15px; border:1px solid #ccc; border-radius:8px; padding:6px 10px; max-width:300px;">
+  <img src="https://www-media.stanford.edu/assets/favicon/favicon-32x32.png" alt="Stanford Logo" style="width:24px; height:24px; margin-right:10px;">
+  <input type="search" placeholder="Search..." style="border:none; outline:none; flex:1; font-size:16px;">
+</div>
 </header>
+
 
 <!-- Content -->
 <section class="mainContent">
