--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Ava Kouhana's Homepage</title>
 <link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
+<link rel="icon" type="image/png" href="https://www-media.stanford.edu/assets/favicon/favicon-32x32.png" sizes="32x32">
 
 <!-- Fonts -->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
@@ -57,12 +58,6 @@
       </a>
     </div>
   </aside>
-
-  <!-- Search Bar with Stanford Logo -->
-<div class="search-bar" style="display:flex; align-items:center; margin-top:15px; border:1px solid #ccc; border-radius:8px; padding:6px 10px; max-width:300px;">
-  <img src="https://www-media.stanford.edu/assets/favicon/favicon-32x32.png" alt="Stanford Logo" style="width:24px; height:24px; margin-right:10px;">
-  <input type="search" placeholder="Search..." style="border:none; outline:none; flex:1; font-size:16px;">
-</div>
 </header>
 
 
