--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </section>
     <aside class="externalResourcesNav">
       <div class="dropdown"><a href="https://ieeexplore.ieee.org/abstract/document/10656848" target="_blank">Paper</a></div>
-      <div class="dropdown"><a href="AboutPageAssets/images/AvaKouhana_20th_Symposium.pdf" target="_blank">Poster</a></div>
+      <div class="dropdown"><a href="AboutPageAssets/images/AvaKouhana_20th_Symposium.jpg" target="_blank">Poster</a></div>
     </aside>
 
   </section>
