--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <footer>
   <br><br>
-  <p class="footerDisclaimer" style="font-size:8px;">Template inspired by <a href="https://lioryariv.github.io/">Lior Yariv</a></p>
+  <p class="footerDisclaimer" style="font-size:8px;">Template inspired by <a href="https://omerbt.github.io">Lior Yariv</a></p>
 </footer>
 </body>
 </html>
