--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
   <h2 class="sectionTitle">Pinned GitHub Projects</h2>
   <hr class="sectionTitleRule">
   <div style="padding-left:40px;">
-    <a href="https://github.com/avakn5/BPE_From_Stratch_CS336_Stanford" target="_blank" style="text-decoration:none;">
-      <img src="https://gh-card.dev/repos/avakn5/BPE_From_Stratch_CS336_Stanford.svg" alt="GitHub Project Card" style="border:0;">
+    <a href="https://github.com/avakn5/BPE-from-Scratch" target="_blank" style="text-decoration:none;">
+      <img src="https://github.com/avakn5/BPE-from-Scratch.svg" alt="GitHub Project Card" style="border:0;">
     </a>
   </div>
 </section>
@@ -157,7 +157,7 @@
 
 <footer>
   <br><br>
-  <p class="footerDisclaimer" style="font-size:8px;">Template inspired by <a href="https://omerbt.github.io">Lior Yariv</a></p>
+  <p class="footerDisclaimer" style="font-size:8px;">Template inspired by <a href="https://omerbt.github.io">Omer Bar Tal</a></p>
 </footer>
 </body>
 </html>
