--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <hr class="sectionTitleRule">
   <div style="padding-left:40px;">
     <a href="https://github.com/avakn5/BPE-from-Scratch" target="_blank" style="text-decoration:none;">
-      <img src="https://github.com/avakn5/BPE-from-Scratch.svg" alt="GitHub Project Card" style="border:0;">
+      <img src="https://gh-card.dev/repos/avakn5/BPE_From_Stratch_CS336_Stanford.svg" alt="GitHub Project Card" style="border:0;">
     </a>
   </div>
 </section>
