--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <h3 class="sectionContentSubTitle"><em>IEEE Nuclear Science Symposium and Medical Imaging Conference (NSS MIC), 2024</em></h3>
     </section>
     <aside class="externalResourcesNav">
-      <div class="dropdown"><a href="https://ieeexplore.ieee.org/abstract/document/10657057" target="_blank">Paper</a></div>
+      <div class="dropdown"><a href="https://ieeexplore.ieee.org/abstract/document/10657057" target="_blank">Abstract</a></div>
       <div class="dropdown"><a href="AboutPageAssets/images/Ava_Kouhana_IEEE_NSS_MIC_denoising_Poster_2024.001.jpeg" target="_blank">Poster</a></div>
     </aside>
 
@@ -139,7 +139,7 @@
       <h3 class="sectionContentSubTitle"><em>IEEE Nuclear Science Symposium and Medical Imaging Conference (NSS MIC), 2024</em></h3>
     </section>
     <aside class="externalResourcesNav">
-      <div class="dropdown"><a href="https://ieeexplore.ieee.org/abstract/document/10656848" target="_blank">Paper</a></div>
+      <div class="dropdown"><a href="https://ieeexplore.ieee.org/abstract/document/10656848" target="_blank">Abstract</a></div>
       <div class="dropdown"><a href="AboutPageAssets/images/AvaKouhana_20th_Symposium.jpg" target="_blank">Poster</a></div>
     </aside>
 
