adding new github pinned project

--- a/index.html
+++ b/index.html
@@ -64,18 +64,20 @@
 <!-- Content -->
 <section class="mainContent">
 
-<section class="section2 github-projects">
+  <section class="section2 github-projects">
   <h2 class="sectionTitle">Pinned GitHub Projects</h2>
   <hr class="sectionTitleRule">
-  <div style="padding-left:40px;">
-    <a href="https://github.com/avakn5/BPE-from-Scratch" target="_blank" style="text-decoration:none;">
-      <img src="https://gh-card.dev/repos/avakn5/BPE-from-Scratch.svg" alt="GitHub Project Card" style="border:0;">
+
+  <div class="project-cards">
+    <a href="https://github.com/avakn5/BPE-from-Scratch" target="_blank">
+      <img src="https://gh-card.dev/repos/avakn5/BPE-from-Scratch.svg" 
+           alt="GitHub Project Card">
     </a>
-  <div style="padding-left:40px;">
-  <a href="https://github.com/avakn5/Transformer-from-Scratch" target="_blank" style="text-decoration:none;">
-    <img src="https://gh-card.dev/repos/avakn5/Transformer-from-Scratch.svg" 
-         alt="GitHub Project Card" style="border:0;">
-  </a>
+
+    <a href="https://github.com/avakn5/Transformer-from-Scratch" target="_blank">
+      <img src="https://gh-card.dev/repos/avakn5/Transformer-from-Scratch.svg" 
+           alt="GitHub Project Card">
+    </a>
   </div>
 </section>
 
