--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <!-- Content -->
 <section class="mainContent">
 
-  <section class="section2 github-projects">
-  <h2 class="sectionTitle">Pinned GitHub Projects</h2>
+  <section class="section2 github-projects" style="margin-bottom: 40px;">
+    <h2 class="sectionTitle">Pinned GitHub Projects</h2>
   <hr class="sectionTitleRule">
 
   <div class="project-cards">
