--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
       <img src="https://gh-card.dev/repos/avakn5/Transformer-from-Scratch.svg" 
            alt="GitHub Project Card">
     </a>
+
+    <a href="https://github.com/avakn5/Assignment1-CS336-Stanford-Solution" target="_blank">
+      <img src="https://github.com/avakn5/Assignment1-CS336-Stanford-Solution.svg" 
+           alt="GitHub Project Card">
+    </a>
   </div>
 </section>
 
