--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
            alt="GitHub Project Card">
     </a>
 
-    <a href="https://github.com/avakn5/Transformer-from-Scratch" target="_blank">
-      <img src="https://gh-card.dev/repos/avakn5/Transformer-from-Scratch.svg" 
+    <a href="https://github.com/avakn5/Assignment1-CS336-Stanford-Solution" target="_blank">
+      <img src="https://github.com/avakn5/Assignment1-CS336-Stanford-Solution.svg" 
            alt="GitHub Project Card">
     </a>
 
